# furrow

./: AGENTS.md  Cargo.toml  README.md
benchmark/baseline/io/fio/: .gitignore  README.md  go.mod  main.go
benchmark/baseline/io/fio/cmd/: list.go  list_test.go  root.go  run.go  version.go
benchmark/baseline/io/fio/doc/: design.md  issues-address.md  issues.md  spec.md
benchmark/baseline/io/fio/internal/analyzer/: classifier.go  classifier_test.go  strategy.go  strategy_test.go
benchmark/baseline/io/fio/internal/errors/: errors.go
benchmark/baseline/io/fio/internal/fio/: jobs.go  jobs_test.go  parser.go  parser_test.go  runner.go  runner_test.go
benchmark/baseline/io/fio/internal/fs/: detector.go  detector_darwin.go  detector_linux.go  detector_test.go  detector_windows.go
benchmark/baseline/io/fio/internal/metadata/: collector.go  collector_darwin.go  collector_linux.go  collector_windows.go
benchmark/baseline/io/fio/internal/prompt/: prompt.go
benchmark/baseline/io/fio/internal/report/: json.go  (+3 more)
io/: Cargo.toml
io/benches/: Cargo.toml  README.md
io/benches/benches/: features.rs  latency.rs  sync_modes.rs  throughput.rs
io/benches/src/: lib.rs
io/scripts/: benchmark.sh
io/src/wal/: allocator.rs  compress.rs  encrypt.rs  error.rs  file.rs  mod.rs  reader.rs  record.rs  uring_advanced.rs  writer.rs  writer_tokio.rs  writer_uring.rs
io/src/wal/doc/: design.md  implementation-plan.md  issues.md
io/wal/: Cargo.toml
io/wal/doc/: benchmark-design-implementation.md  benchmark-design.md  design.md  implementation-plan.md  io-uring-optimization.md  issues-address.md  research.md
io/wal/src/: compress.rs  config.rs  encrypt.rs  error.rs  file.rs  lib.rs  reader.rs  record.rs  uring_advanced.rs  writer.rs  writer_tokio.rs  writer_uring.rs
(+1 files in other folders)
